# metal_ai

./: README.md  project_structure  pyproject.toml  requirements.txt  setup.py
configs/: default.yaml  inference.yaml  model.yaml  train.yaml
src/datasets/: composite_dataset.py
src/preprocessing/: feature_engineering.py
